Bug 162065 - can't clone "format" of a shape anymore
Summary: can't clone "format" of a shape anymore
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Clone-Formatting
  Show dependency treegraph
 
Reported: 2024-07-17 05:20 UTC by Stéphane Guillou (stragu)
Modified: 2024-08-23 11:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample ODG (15.87 KB, application/vnd.oasis.opendocument.graphics)
2024-07-17 05:20 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-07-17 05:20:39 UTC
Created attachment 195344 [details]
sample ODG

Since 24.8, it is not possible to copy the formatting of a shape with the Clone Formatting tool (i.e. all attributes like line properties, area, along with the format of the text that it contains).
That feature already existed in OOo 3.3.

In the attachment, try copying the top rectangle's formatting across to the vanilla rectangle.

Bibisected with linux-64-24.8 to first bad build [6d848b689daccb24984b7a7f28f5ca1480d29443] which is:

commit dbb05dc818afb08b3e05ac62bd92389a5cf90fa7
author	Oliver Specht 	Thu Mar 07 12:47:22 2024 +0100
committer	Thorsten Behrens 	Thu Mar 07 21:48:37 2024 +0100
tdf#159726 Improve Clone formatting
Paragraph attributes and lists are copied if there is no source
selection or the source selection includes at least a full paragraph.
They are only applied to an empty or a paragraph selection.
As in tdf#160069 requested the clone formatting function is only enabled
in text edit mode.
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164533

Oliver, can you please have a look?
Comment 1 Rafael Lima 2024-07-17 19:09:23 UTC
For me the Clone tool is disabled in LO Draw/Impress.

Setting this to NEW.
Comment 2 Oliver Specht (CIB) 2024-07-18 05:44:22 UTC
In https://gerrit.libreoffice.org/c/core/+/170672 the changes from tdf#160069 and tdf#160069 are mostly undone.
Comment 3 Commit Notification 2024-08-05 14:44:14 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f828a9fe44bfef9af58035340b6d6afd67d5a870

tdf#162065 Fix format paintbrush in draw/impress

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2024-08-12 14:04:04 UTC
Verified in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 59cb37a210675d4269c2fcd48feeffe942538891
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Clone formatting now works on the rectangle shapes.
Comment 5 Commit Notification 2024-08-23 11:14:34 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c14b39084f596ed3a12057c85c27f2e900d6cced

tdf#162065 Fix format paintbrush in draw/impress

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.