tdf#162065 Fix format paintbrush in draw/impress

With tdf#160069 the format paintbrush was disabled outside of text
selection and with tdf#160069 target selection was reduced to
text only. The change of tdf#160069 is mostly undone with this
patch.

Change-Id: I8e23ef56206c6749913e2c95870537c3e378f946
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170672
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>